Comments were added to the notebook.

--- a/etl_extract.ipynb
+++ b/etl_extract.ipynb
@@ -5,7 +5,7 @@
    "id": "b2c9fd5c",
    "metadata": {},
    "source": [
-    "### Simulating a Time-Based Data Pipeline with Full and Incremental Extraction Using Hospital Admissions Data\n"
+    "### **Full, Incremental Extraction, and Transformation Using simulated Hospital Admissions Data**"
    ]
   },
   {
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1097,
+   "execution_count": 1657,
    "id": "f534dd8e",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1098,
+   "execution_count": 1658,
    "id": "99071a23",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "1fb22ed8-66eb-4308-bdf8-3fc360557f15",
+       "ref": "ff862ea8-e3df-4215-9371-92edfaeb03f6",
        "rows": [
         [
          "0",
@@ -256,7 +256,7 @@
        "4   None  "
       ]
      },
-     "execution_count": 1098,
+     "execution_count": 1658,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1099,
+   "execution_count": 1659,
    "id": "1ab1d2ff",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "2c5b71a2-3998-4134-9899-55bcbaadb9a8",
+       "ref": "d7b1709f-6e28-443e-8661-f294a0bbb403",
        "rows": [
         [
          "0",
@@ -557,7 +557,7 @@
        "4    NaN  "
       ]
      },
-     "execution_count": 1099,
+     "execution_count": 1659,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1100,
+   "execution_count": 1660,
    "id": "275944f8",
    "metadata": {},
    "outputs": [],
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1101,
+   "execution_count": 1661,
    "id": "b47a320a",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "37a9927e-b82f-425d-aadd-defd3f775d57",
+       "ref": "d2e4712d-d599-4c83-b37b-5b7940074e4d",
        "rows": [
         [
          "75",
@@ -833,7 +833,7 @@
        "80   Other  "
       ]
      },
-     "execution_count": 1101,
+     "execution_count": 1661,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1102,
+   "execution_count": 1662,
    "id": "6cc8bb45",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1103,
+   "execution_count": 1663,
    "id": "510841b4",
    "metadata": {},
    "outputs": [
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1104,
+   "execution_count": 1664,
    "id": "0f776ec1",
    "metadata": {},
    "outputs": [
@@ -969,7 +969,7 @@
        "0"
       ]
      },
-     "execution_count": 1104,
+     "execution_count": 1664,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -979,8 +979,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "78c6a2e8",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "Presence of duplicated values was checked,but not found.\n",
+    "___"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1105,
+   "execution_count": 1665,
    "id": "4d42a5c7",
    "metadata": {},
    "outputs": [
@@ -999,7 +1009,7 @@
          "type": "integer"
         }
        ],
-       "ref": "a2c28bb5-2874-4261-9e81-05b1160abd4a",
+       "ref": "a4511a66-d711-4e10-8f6d-500de0c56151",
        "rows": [
         [
          "id",
@@ -1046,7 +1056,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 1105,
+     "execution_count": 1665,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1106,
+   "execution_count": 1666,
    "id": "65a4e86f",
    "metadata": {},
    "outputs": [],
@@ -1067,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1107,
+   "execution_count": 1667,
    "id": "91b3ef50",
    "metadata": {},
    "outputs": [],
@@ -1077,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1108,
+   "execution_count": 1668,
    "id": "d6aa1d16",
    "metadata": {},
    "outputs": [
@@ -1096,7 +1106,7 @@
          "type": "integer"
         }
        ],
-       "ref": "667a4a31-e31c-404a-8cb0-5083050f240d",
+       "ref": "e4b3ff12-2ff2-490f-8535-4a9540e52a4f",
        "rows": [
         [
          "id",
@@ -1143,7 +1153,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 1108,
+     "execution_count": 1668,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1154,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1109,
+   "execution_count": 1669,
    "id": "18e46e51",
    "metadata": {},
    "outputs": [],
@@ -1165,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1110,
+   "execution_count": 1670,
    "id": "c42386c4",
    "metadata": {},
    "outputs": [
@@ -1196,6 +1206,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "495fe8b0",
+   "metadata": {},
+   "source": [
+    "___  \n",
+    "##### Data Cleaning Summary\n",
+    "\n",
+    "**What was done:**\n",
+    "- Missing values in the `\"age\"` column were filled using the mean value.\n",
+    "- Missing values in the `\"gender\"` column were filled using the mode (most frequent value).\n",
+    "- The data type for `\"age\"` was converted from float to integer.\n",
+    "- The data type for `\"admission_date\"` was converted from object (string) to datetime.\n",
+    "\n",
+    "**Importance:**\n",
+    "-  **Ensures Data Consistency**: Filling in missing values and correcting data types prevents errors during analysis and ensures uniform data.\n",
+    "-  **Enables Accurate Aggregation & Filtering**: Proper data types (like datetime) allow for time-based analysis, sorting, and grouping.\n",
+    "-  **Improves Data Quality**: Handling missing values and formatting ensures the dataset is complete and ready for reliable analysis and modeling.\n",
+    "___\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b55cab68",
    "metadata": {},
    "source": [
@@ -1204,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1111,
+   "execution_count": 1671,
    "id": "d5869c2c",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1284,7 @@
          "type": "string"
         }
        ],
-       "ref": "84938761-74b5-42a9-836b-5fa15881652c",
+       "ref": "153a24d7-1640-419c-a486-9c54a612fefe",
        "rows": [
         [
          "0",
@@ -1410,7 +1441,7 @@
        "4   44  Other  "
       ]
      },
-     "execution_count": 1111,
+     "execution_count": 1671,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1430,6 +1461,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "21fb6bae",
+   "metadata": {},
+   "source": [
+    " ___\n",
+    " ##### *Why Add a Surrogate Key (`patient_id`) and Drop the Original `id`?*\n",
+    "\n",
+    "- **Ensures Uniqueness**  \n",
+    "  A surrogate key like `patient_id` guarantees each row has a unique identifier, which is critical for data integrity—especially if the original `id` column had duplicates or gaps.\n",
+    "\n",
+    "- **Decouples from Source System**  \n",
+    "  Using a new surrogate key prevents dependency on the original system’s identifiers, making the dataset more flexible and portable for future use.\n",
+    "\n",
+    "- **Improves Data Integration**  \n",
+    "  Surrogate keys simplify the process of merging and integrating with other datasets by providing a clean, consistent identifier.\n",
+    "  ___\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9670d0e2",
    "metadata": {},
    "source": [
@@ -1438,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1112,
+   "execution_count": 1672,
    "id": "2dfe074b",
    "metadata": {},
    "outputs": [],
@@ -1455,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1113,
+   "execution_count": 1673,
    "id": "9770832f",
    "metadata": {},
    "outputs": [
@@ -1492,8 +1542,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d33ac72a",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "##### Importance of Categorization\n",
+    "- **Simplifies Analysis and Visualization**  \n",
+    "  Grouping continuous age data into meaningful categories (e.g., Child, Teenager, etc.) makes it easier to summarize, compare, and visualize patterns in the dataset (e.g., admission trends by age group).\n",
+    "\n",
+    "- **Enables Categorical Aggregation**  \n",
+    "  Creating age groups allows for grouping and aggregating data (like count or severity) based on age categories, which is essential for reporting and demographic analysis in healthcare datasets.\n",
+    "___"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1114,
+   "execution_count": 1674,
    "id": "0b49fd1c",
    "metadata": {},
    "outputs": [],
@@ -1519,17 +1584,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1115,
+   "execution_count": 1675,
    "id": "61f666e5",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Load dataset with incremental updates\n",
     "df_incremental= pd.read_csv(\"hospital_admission_incremental.csv\", parse_dates=[\"last_updated\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1116,
+   "execution_count": 1676,
    "id": "45f3abb8",
    "metadata": {},
    "outputs": [
@@ -1539,7 +1605,7 @@
        "0"
       ]
      },
-     "execution_count": 1116,
+     "execution_count": 1676,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1550,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1117,
+   "execution_count": 1677,
    "id": "9cf10487",
    "metadata": {},
    "outputs": [
@@ -1581,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1118,
+   "execution_count": 1678,
    "id": "a086b0db",
    "metadata": {},
    "outputs": [],
@@ -1596,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1119,
+   "execution_count": 1679,
    "id": "541eeeda",
    "metadata": {},
    "outputs": [
@@ -1628,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1120,
+   "execution_count": 1680,
    "id": "ef06d0a8",
    "metadata": {},
    "outputs": [],
@@ -1639,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1121,
+   "execution_count": 1681,
    "id": "7de43070",
    "metadata": {},
    "outputs": [
@@ -1678,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1122,
+   "execution_count": 1682,
    "id": "537605c2",
    "metadata": {},
    "outputs": [
@@ -1727,7 +1793,7 @@
          "type": "string"
         }
        ],
-       "ref": "d4247bf2-b054-4b49-832c-7b2eba7b9ad8",
+       "ref": "61b26ddc-0402-47d1-ba3b-79cb37d5f4b1",
        "rows": [
         [
          "0",
@@ -1884,15 +1950,12 @@
        "4   54   Other  "
       ]
      },
-     "execution_count": 1122,
+     "execution_count": 1682,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Drop the old 'id' column \n",
-    "# df_incremental.drop(columns='id', inplace=True)\n",
-    "\n",
     "# Add a new surrogate key as 'patient_id'\n",
     "df_incremental.insert(0, 'patient_id', range(1, len(df_incremental) + 1))\n",
     "\n",
@@ -1912,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1123,
+   "execution_count": 1683,
    "id": "4a35bea0",
    "metadata": {},
    "outputs": [],
@@ -1929,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1124,
+   "execution_count": 1684,
    "id": "d5e0b2b0",
    "metadata": {},
    "outputs": [
