--- a/etl_extract.ipynb
+++ b/etl_extract.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1657,
+   "execution_count": 1,
    "id": "f534dd8e",
    "metadata": {},
    "outputs": [],
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1658,
+   "execution_count": 2,
    "id": "99071a23",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "ff862ea8-e3df-4215-9371-92edfaeb03f6",
+       "ref": "ff31f3d5-c2d6-42a4-b4e4-0197ce0fc8c2",
        "rows": [
         [
          "0",
@@ -256,7 +256,7 @@
        "4   None  "
       ]
      },
-     "execution_count": 1658,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1659,
+   "execution_count": 3,
    "id": "1ab1d2ff",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "d7b1709f-6e28-443e-8661-f294a0bbb403",
+       "ref": "d1179612-4d47-4028-9917-f12b97dcb1f8",
        "rows": [
         [
          "0",
@@ -557,7 +557,7 @@
        "4    NaN  "
       ]
      },
-     "execution_count": 1659,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1660,
+   "execution_count": 4,
    "id": "275944f8",
    "metadata": {},
    "outputs": [],
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1661,
+   "execution_count": 5,
    "id": "b47a320a",
    "metadata": {},
    "outputs": [
@@ -676,7 +676,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "d2e4712d-d599-4c83-b37b-5b7940074e4d",
+       "ref": "9b80d231-2689-41c7-acba-f96f012674d6",
        "rows": [
         [
          "75",
@@ -833,7 +833,7 @@
        "80   Other  "
       ]
      },
-     "execution_count": 1661,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1662,
+   "execution_count": 6,
    "id": "6cc8bb45",
    "metadata": {},
    "outputs": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1663,
+   "execution_count": 7,
    "id": "510841b4",
    "metadata": {},
    "outputs": [
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1664,
+   "execution_count": 8,
    "id": "0f776ec1",
    "metadata": {},
    "outputs": [
@@ -969,7 +969,7 @@
        "0"
       ]
      },
-     "execution_count": 1664,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1665,
+   "execution_count": 9,
    "id": "4d42a5c7",
    "metadata": {},
    "outputs": [
@@ -1009,7 +1009,7 @@
          "type": "integer"
         }
        ],
-       "ref": "a4511a66-d711-4e10-8f6d-500de0c56151",
+       "ref": "89022934-ab46-40b1-b182-8af459ecff0a",
        "rows": [
         [
          "id",
@@ -1056,7 +1056,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 1665,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1666,
+   "execution_count": 10,
    "id": "65a4e86f",
    "metadata": {},
    "outputs": [],
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1667,
+   "execution_count": 11,
    "id": "91b3ef50",
    "metadata": {},
    "outputs": [],
@@ -1087,7 +1087,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1668,
+   "execution_count": 12,
    "id": "d6aa1d16",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1106,7 @@
          "type": "integer"
         }
        ],
-       "ref": "e4b3ff12-2ff2-490f-8535-4a9540e52a4f",
+       "ref": "5f108533-f915-432a-b6b4-0a046086f1d6",
        "rows": [
         [
          "id",
@@ -1153,7 +1153,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 1668,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1164,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1669,
+   "execution_count": 13,
    "id": "18e46e51",
    "metadata": {},
    "outputs": [],
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1670,
+   "execution_count": 14,
    "id": "c42386c4",
    "metadata": {},
    "outputs": [
@@ -1235,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1671,
+   "execution_count": 15,
    "id": "d5869c2c",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1284,7 @@
          "type": "string"
         }
        ],
-       "ref": "153a24d7-1640-419c-a486-9c54a612fefe",
+       "ref": "36c3b66e-a6f4-4849-a9ab-81319788ec75",
        "rows": [
         [
          "0",
@@ -1441,7 +1441,7 @@
        "4   44  Other  "
       ]
      },
-     "execution_count": 1671,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1488,7 +1488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1672,
+   "execution_count": 16,
    "id": "2dfe074b",
    "metadata": {},
    "outputs": [],
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1673,
+   "execution_count": 17,
    "id": "9770832f",
    "metadata": {},
    "outputs": [
@@ -1558,7 +1558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1674,
+   "execution_count": 18,
    "id": "0b49fd1c",
    "metadata": {},
    "outputs": [],
@@ -1584,7 +1584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1675,
+   "execution_count": 19,
    "id": "61f666e5",
    "metadata": {},
    "outputs": [],
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1676,
+   "execution_count": 20,
    "id": "45f3abb8",
    "metadata": {},
    "outputs": [
@@ -1605,7 +1605,7 @@
        "0"
       ]
      },
-     "execution_count": 1676,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1616,7 +1616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1677,
+   "execution_count": 21,
    "id": "9cf10487",
    "metadata": {},
    "outputs": [
@@ -1647,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1678,
+   "execution_count": 22,
    "id": "a086b0db",
    "metadata": {},
    "outputs": [],
@@ -1662,7 +1662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1679,
+   "execution_count": 23,
    "id": "541eeeda",
    "metadata": {},
    "outputs": [
@@ -1694,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1680,
+   "execution_count": 24,
    "id": "ef06d0a8",
    "metadata": {},
    "outputs": [],
@@ -1705,7 +1705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1681,
+   "execution_count": 25,
    "id": "7de43070",
    "metadata": {},
    "outputs": [
@@ -1744,7 +1744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1682,
+   "execution_count": 26,
    "id": "537605c2",
    "metadata": {},
    "outputs": [
@@ -1793,7 +1793,7 @@
          "type": "string"
         }
        ],
-       "ref": "61b26ddc-0402-47d1-ba3b-79cb37d5f4b1",
+       "ref": "5d69cbdb-522b-48fa-b6f6-8adcf0dabd11",
        "rows": [
         [
          "0",
@@ -1950,7 +1950,7 @@
        "4   54   Other  "
       ]
      },
-     "execution_count": 1682,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1975,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1683,
+   "execution_count": 27,
    "id": "4a35bea0",
    "metadata": {},
    "outputs": [],
@@ -1992,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1684,
+   "execution_count": 28,
    "id": "d5e0b2b0",
    "metadata": {},
    "outputs": [
@@ -2024,6 +2024,17 @@
     "\n",
     "# Print the result\n",
     "print(group_ranges.to_string(index=False))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "699308fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the full transformed dataset\n",
+    "df_incremental.to_csv(\"transformed_incremental.csv\", index=False)\n"
    ]
   }
  ],
