--- a/etl_extract.ipynb
+++ b/etl_extract.ipynb
@@ -915,7 +915,7 @@
    "id": "910f5e23",
    "metadata": {},
    "source": [
-    "### **Full data**"
+    "### **Transform Full data**"
    ]
   },
   {
@@ -1571,7 +1571,7 @@
    "id": "64b9d296",
    "metadata": {},
    "source": [
-    "### **Incremental Data**"
+    "### **Transform Incremental Data**"
    ]
   },
   {
