Notebook was updated

--- a/etl_extract.ipynb
+++ b/etl_extract.ipynb
@@ -31,10 +31,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d8b5cf9e",
+   "metadata": {},
+   "source": [
+    "#### **Section_1: Hospital Admissions Data Simulation**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c1e92914",
    "metadata": {},
    "source": [
-    "#### **Hospital Admissions Data Simulation**\n",
     "In the following code:\n",
     "\n",
     "- A realistic hospital admissions dataset is simulated over a 60-day period starting April 1, 2025.  \n",
@@ -330,7 +337,7 @@
    "id": "0f3f6b5b",
    "metadata": {},
    "source": [
-    "#### **Full Extraction**\n",
+    "#### **Section_2:Full Extraction**\n",
     "In the following code:\n",
     "- The entire dataset is loaded from the CSV file `'hospital_admissions.csv'` with the `'last_updated'` column parsed as datetime.  \n",
     "- The number of rows and columns in the dataset is displayed separately to give a detailed overview of its dimensions.  \n",
@@ -607,7 +614,7 @@
    "id": "5a2a9621",
    "metadata": {},
    "source": [
-    "#### **Incremental Extraction**\n",
+    "#### **Section_3:Incremental Extraction**\n",
     "In the following code:\n",
     "\n",
     "- The last extraction timestamp is read from the file `'last_extraction.txt'` and any extra whitespace is  using strip() function.  \n",
@@ -620,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "b47a320a",
    "metadata": {},
    "outputs": [
@@ -839,7 +846,6 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "\n",
     "# Step 1: Read the last extraction timestamp from the text file\n",
     "with open(\"last_extraction.txt\", \"r\") as f:\n",
@@ -915,7 +921,7 @@
    "id": "910f5e23",
    "metadata": {},
    "source": [
-    "### **Transform Full data**"
+    "### **Section_4:Transform Full data**"
    ]
   },
   {
@@ -1571,7 +1577,7 @@
    "id": "64b9d296",
    "metadata": {},
    "source": [
-    "### **Transform Incremental Data**"
+    "### **Section_5:Transform Incremental Data**"
    ]
   },
   {
